fix alignment for code blocks with line anchors

--- a/themes/gauge_theme/static/css/theme_unminified.css
+++ b/themes/gauge_theme/static/css/theme_unminified.css
@@ -7213,60 +7213,6 @@ span[id*='MathJax-Span'] {
     color: #aaaaaa;
 }
 
-.wy-menu-vertical a:active {
-    background-color: #f5c10e;
-    cursor: pointer;
-    color: #555555;
-}
-
-.admonition, .admonition p {
-    font-size: small;
-}
-
-#contents .simple ul > li {
-    padding-left: 0.9em;
-}
-
-ul#resources li {
-    list-style: none;
-    margin-left: 0px;
-}
-
-ul#resources li dl dt{
-    font-size: larger;
-}
-
-ul#resources li dl dd{
-    margin-left: 5px;
-}
-
-ul#resources > li ul > li{
-    margin-top: 0.2em;
-    margin-bottom: 0.2em;
-}
-
-span.resource-description {
-    display: block;
-    font-size: smaller;
-    padding-left: 0.2em;
-    font-style: italic;
-}
-
-ul.current {
-    margin-bottom: 1em;
-}
-
-@media only screen and (min-width: 768px){
-    ul#resources{
-        -moz-column-count: 2;
-        -moz-column-gap: 2.5em;
-        -webkit-column-count: 2;
-        -webkit-column-gap: 2.5em;
-        column-count: 2;
-        column-gap: 2.5em;
-    }
-}
-
 /* Pygments styles */
 .highlight .hll { background-color: #49483e }
 .highlight  { background: #272822; color: #f8f8f2 }
@@ -7338,3 +7284,61 @@ ul.current {
 .highlight .vi { color: #f8f8f2 } /* Name.Variable.Instance */
 .highlight .vm { color: #f8f8f2 } /* Name.Variable.Magic */
 .highlight .il { color: #ae81ff } /* Literal.Number.Integer.Long */
+
+.highlight > pre > span{
+    line-height: 1.6em;
+}
+
+.wy-menu-vertical a:active {
+    background-color: #f5c10e;
+    cursor: pointer;
+    color: #555555;
+}
+
+.admonition, .admonition p {
+    font-size: small;
+}
+
+#contents .simple ul > li {
+    padding-left: 0.9em;
+}
+
+ul#resources li {
+    list-style: none;
+    margin-left: 0px;
+}
+
+ul#resources li dl dt{
+    font-size: larger;
+}
+
+ul#resources li dl dd{
+    margin-left: 5px;
+}
+
+ul#resources > li ul > li{
+    margin-top: 0.2em;
+    margin-bottom: 0.2em;
+}
+
+span.resource-description {
+    display: block;
+    font-size: smaller;
+    padding-left: 0.2em;
+    font-style: italic;
+}
+
+ul.current {
+    margin-bottom: 1em;
+}
+
+@media only screen and (min-width: 768px){
+    ul#resources{
+        -moz-column-count: 2;
+        -moz-column-gap: 2.5em;
+        -webkit-column-count: 2;
+        -webkit-column-gap: 2.5em;
+        column-count: 2;
+        column-gap: 2.5em;
+    }
+}
